# api_v4_fast_api

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
api_v4/: __init__.py
api_v4/logging_of_actions/manager_actions/: crud.py  dependencies.py  schemas.py  views.py
api_v4/logging_of_actions/operator_actions/: crud.py  schemas.py  views.py
api_v4/logging_of_actions/partner_actions/: crud.py  schemas.py  views.py
api_v4/models/acqu_bank/: crud.py  dependencies.py  schemas.py  views.py
api_v4/models/client/: auth.py  crud.py  dependencies.py  schemas.py  validator.py  views.py
api_v4/models/event/: crud.py  dependencies.py  schemas.py  views.py
api_v4/models/host/: crud.py  dependencies.py  schemas.py  views.py
api_v4/models/invoice/: crud.py  (+3 more)
core/: config.py
core/hasher/: __init__.py  hasher.py
core/models/: acqu_bank.py  association_tables.py  autounsub.py  banks.py  browser.py  chargeback.py  check.py  client.py  country.py  db.py  domain.py  event.py  host.py  incoming_transaction.py  incoming_transaction_id.py  invoice.py  kass_type.py  kassa.py  landing.py  landing_element.py  manager.py  manager_action.py  news.py  offer.py  operator_action.py  organisation.py  os.py  partner.py  partner_action.py  partner_landing.py  payout.py  payout_requisite.py  paysystem.py  postback.py  postback_event.py  prelanding.py  promo.py  promo_data.py  promo_landing.py  rebill_correction.py  (+8 more)
tests/: Makefile  __init__.py  conftest.py  docker-compose-test.yaml
tests/statistic/: test_daily_statistic.py
(+90 files in other folders)
